<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_bg"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:weightSum="10"
    tools:context=".view.activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@mipmap/icon_qq_login" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qq"
                android:textColor="@color/white"
                android:textSize="30sp" />

        </LinearLayout>


        <EditText
            android:id="@+id/edit_account_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:background="@null"
            android:hint="@string/register_account"
            android:inputType="number"
            android:textColor="@color/white"
            android:textColorHint="@color/hint_white" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#88ffffff" />

        <EditText
            android:id="@+id/edit_password_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@null"
            android:hint="@string/password"
            android:textColor="@color/white"
            android:textColorHint="@color/hint_white" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#88ffffff" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/blue_button_a"
            android:text="@string/login"
            android:textColor="@color/white" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:id="@+id/text_forget_pass_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/fogot_password"
                android:textColor="@color/theme_blue" />

            <TextView
                android:id="@+id/text_register_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:text="@string/new_register"
                android:textColor="@color/theme_blue" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="30dp"
                android:gravity="bottom|center"
                android:text="@string/protocol1"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/text_protocol"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="30dp"
                android:gravity="bottom|center"
                android:text="@string/protocol2"
                android:textColor="@drawable/protocol_selector" />

        </LinearLayout>


    </LinearLayout>


</LinearLayout>