<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_gray"
    android:orientation="vertical"
    tools:context=".view.activity.RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/theme_blue">

        <ImageView
            android:id="@+id/img_register_back"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:src="@mipmap/icon_arrow_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </RelativeLayout>

    <EditText
        android:id="@+id/edit_account_register"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:hint="@string/register_account"
        android:inputType="number"
        android:paddingLeft="10dp"
        android:textColorHint="@color/text_gray" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line_normal" />


    <EditText
        android:id="@+id/edit_password_register"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:hint="@string/password"
        android:maxLength="16"
        android:paddingLeft="10dp"
        android:textColorHint="@color/text_gray" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line_normal" />


    <EditText
        android:id="@+id/edit_repassword_register"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:hint="@string/repassword"
        android:maxLength="16"
        android:paddingLeft="10dp"
        android:textColorHint="@color/text_gray" />


    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:background="@drawable/blue_button_shape"
        android:text="@string/register"
        android:textColor="@color/white" />


</LinearLayout>