<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/main_title_bar" />

    <FrameLayout
        android:id="@+id/frame_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line_normal" />

    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="4dp"
        android:paddingTop="4dp">

        <RadioButton
            android:id="@+id/radio_message"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:checked="true"
            android:drawableTop="@drawable/message_selector"
            android:gravity="center"
            android:text="@string/message"
            android:textColor="@drawable/text_blue_black_selector" />

        <RadioButton
            android:id="@+id/radio_contact"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/contact_selector"
            android:gravity="center"
            android:text="@string/contact_people"
            android:textColor="@drawable/text_blue_black_selector" />

        <RadioButton
            android:id="@+id/radio_dynamic"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/dynamic_selector"
            android:gravity="center"
            android:text="@string/dynamic"
            android:textColor="@drawable/text_blue_black_selector" />
    </RadioGroup>

</LinearLayout>