<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.activity.ConfigActivity">

    <include layout="@layout/common_bar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/input_ip"
        android:textColor="@color/text_black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edit_rank1_ip"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:background="@drawable/edit_sb_iw_bg"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="3"
            android:textColor="@color/text_black"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:text="."
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_rank2_ip"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:background="@drawable/edit_sb_iw_bg"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="3"
            android:textColor="@color/text_black"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:text="."
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_rank3_ip"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:background="@drawable/edit_sb_iw_bg"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="3"
            android:textColor="@color/text_black"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:text="."
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_rank4_ip"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:background="@drawable/edit_sb_iw_bg"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="3"
            android:textColor="@color/text_black"
            android:textSize="14sp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp">

        <TextView
            android:id="@+id/text_contact_try_ip"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:autoLink="all"
            android:clickable="true"
            android:gravity="center_vertical"
            android:text="@string/contact_try"
            android:textColor="@color/theme_blue" />

        <Button
            android:id="@+id/btn_confirm_ip"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="right"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/blue_button_shape"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </RelativeLayout>


</LinearLayout>